--- a/pages/article/post-3.mdx
+++ b/pages/article/post-3.mdx
@@ -1,13 +1,9 @@
-import BlogPost from '../../../layouts/BlogPost'
-
-export const meta = {
-  title: 'From React to Next JS - How to get started?',
-  description: 'Migrating from React to Next',
-  date: 'Aug 20, 2020',
-  readTime: 10
-}
-
-export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
+---
+title: 'From React to Next JS - How to get started?'
+description: 'Migrating from React to Next'
+date: 'Aug 20, 2020'
+readTime: 10
+---
 
 ## My Headline
 
