chore: 增加其样式及其排版

--- a/pages/article/post-3.mdx
+++ b/pages/article/post-3.mdx
@@ -6,8 +6,8 @@ tags:
   - vue
   - html
   - node
-catg: ''
-banner: ''
+catg: '技术心得'
+banner: 'https://placem.at/people?w=500&h=500'
 origin: 0
 createdAt: '2021-05-11T14:02:32.795Z'
 updatedAt: '2021-05-12T15:00:32.676Z'
