--- a/pages/article/post-1.mdx
+++ b/pages/article/post-1.mdx
@@ -4,8 +4,8 @@ description: Getting started with the Next framework
 tags:
   - javascript
   - node
-catg: ''
-banner: ''
+catg: '技术心得'
+banner: 'https://placem.at/people?w=500&h=500'
 origin: 0
 createdAt: '2021-05-11T14:02:32.794Z'
 updatedAt: '2021-05-13T13:23:37.802Z'
