--- a/pages/article/post-2.mdx
+++ b/pages/article/post-2.mdx
@@ -5,8 +5,8 @@ tags:
   - javascript
   - react
   - css
-catg: ''
-banner: ''
+catg: '技术心得'
+banner: 'https://placem.at/people?w=500&h=500'
 origin: 0
 createdAt: '2021-05-11T14:02:32.795Z'
 updatedAt: '2021-05-13T13:19:25.810Z'
