--- a/pages/article/post-4.mdx
+++ b/pages/article/post-4.mdx
@@ -3,8 +3,8 @@ title: From the beginning to the actual
 description: Migrating from React to Next
 tags:
   - node
-catg: ''
-banner: ''
+catg: '技术心得'
+banner: 'https://placem.at/people?w=500&h=500'
 origin: 0
 createdAt: '2021-05-12T13:47:29.870Z'
 updatedAt: '2021-05-12T15:00:26.341Z'
