--- a/src/pages/content/symbol_set_map.mdx
+++ b/src/pages/content/symbol_set_map.mdx
@@ -11,7 +11,8 @@ updatedAt: '2021-10-10T08:58:12.525Z'
 ---
 
 1. **什么是Symbol?**
-    ES6引入一种新的原始数据类型`Symbol`,表示独一无二的值。它是 JavaScript 语言的第七种数据类型，前六种是：`undefined`、`null`、布尔值（`Boolean`）、字符串（`String`）、数值（`Number`）、对象（`Object`）
+> ES6引入一种新的原始数据类型`Symbol`,表示独一无二的值。它是 JavaScript 语言的第七种数据类型，前六种是：`undefined`、`null`、布尔值（`Boolean`）、字符串（`String`）、数值（`Number`）、对象（`Object`）
+
     1. Symbol值通过`Symbol`函数生成，凡是属性名属于Symbol类型是独一无二的，可保证不会和其他数据类型冲突的
     2. 使用`Symbol`的话，请注意：
         1. Symbol函数前不能使用new命令，否则会报错，因为生成Symbol本身是一个原始数据类型的值，而不是对象
